Se modifica la variable del PGS_USER a technologyos y en la documentacion

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PGS_USER=space
+PGS_USER=technologyos
 PGS_PASSWORD=YXNhbGF6YXJqQGdtYWlsLmNvbToqR
-PGS_DB=spacedb
+PGS_DB=space_db
 PGA_EMAIL=technologyos@gmail.com
 PGA_PASSWORD=i1KYU5kUmdVa1hwMnI1d
