Se modifica el nombre del artifactId a monorepo-workspace

--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.technologyos</groupId>
-  <artifactId>monorepo</artifactId>
+  <artifactId>monorepo-workspace</artifactId>
   <packaging>pom</packaging>
-  <name>monorepo</name>
+  <name>monorepo-workspace</name>
   <version>1.0-SNAPSHOT</version>
 
 
