--- a/business/pom.xml
+++ b/business/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.technologyos</groupId>
-        <artifactId>monorepo</artifactId>
+        <artifactId>monorepo-workspace</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
